<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundforms"
    tools:context=".TelaCadastro">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunito_negrito"
        android:gravity="center"
        android:text="@string/Cadastro"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/nunito_negrito"
        android:gravity="center"
        android:text="@string/informar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/container_forms_components"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/edtSenhaCadastro"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/senha"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRepetirEmailCadastro" />

    <EditText
        android:id="@+id/edtRepetirEmailCadastro"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/email_cad_confirma"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/dicaConfirmarEmail"
        android:inputType="textEmailAddress"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailCadastro" />

    <EditText
        android:id="@+id/edtRepetirSenhaCadastro"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/senha_confirma"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/dicaConfirmarSenha"
        android:inputType="textPassword"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSenhaCadastro" />

    <EditText
        android:id="@+id/edtTelefone"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/telefone"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/dicaTelefone"
        android:inputType="text"
        android:maxLength="15"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDataNascimento" />

    <EditText
        android:id="@+id/edtDataNascimento"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/data"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/dicaDTNascimento"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNomeCadastro" />

    <EditText
        android:id="@+id/edtEmailCadastro"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/email_cad"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTelefone" />

    <EditText
        android:id="@+id/edtNomeCadastro"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-351dp"
        android:layout_marginEnd="25dp"
        android:drawableRight="@drawable/usuario"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/dicaNome"
        android:inputType="text"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/nunito_negrito"
        android:text="@string/botaoCadastrar"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCadastro" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRepetirSenhaCadastro">

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="#00CFF0"
            android:checked="true"
            android:drawableRight="@drawable/user_h"
            android:fontFamily="@font/helvetica"
            android:text="@string/masculino"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/user_m"
            android:fontFamily="@font/helvetica"
            android:text="@string/feminino"
            android:textSize="13sp" />

        <RadioButton
            android:id="@+id/rdbOutro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableRight="@drawable/user"
            android:fontFamily="@font/helvetica"
            android:text="@string/outro"
            android:textSize="13sp" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarCadastro"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:progressTint="#00FFD9"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/btnVoltarParaLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/helvetica"
        android:gravity="center"
        android:text="@string/voltarLogin"
        android:textColor="#0021B3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>